crates/xmtp_macro/tests/ui/retryable/duplicate_same_key.stderr
error: duplicate `#[retry(...)]` key `inherit`
 --> tests/ui/retryable/duplicate_same_key.rs:8:13
  |
8 |     #[retry(inherit)]
  |             ^^^^^^^
